Added first three parts, almost done

--- a/index.html
+++ b/index.html
@@ -8,68 +8,94 @@
 </head>
 <body>
     <div class="container px-5 my-5">
+        <div class="heading">
+            <h1>Payment form example</h1>
+        </div>
         <form id="contactForm" data-sb-form-api-token="API_TOKEN">
-            <div class="mb-3">
-                <label class="form-label" for="card">Card #</label>
-                <input class="form-control" id="card" type="text" placeholder="Card #" data-sb-validations="required" />
-                <div class="invalid-feedback" data-sb-feedback="card:required">Card # is required.</div>
+            <div class="card-info">
+                <div class="missing mt-5 bg-danger-subtle">
+                    <p>Some fields are missing</p>
+                </div>
+                <div class="d-flex justify-content-between">
+                    <div class="mb-3">
+                        <fieldset style="border:1px solid #999; padding:6px;">
+                            <label class="form-label" for="card">Card #</label>
+                            <input class="form-control" size=40 id="card" type="text" placeholder="XXXXXXXXXXXXXXXX" data-sb-validations="required" />
+                            <div class="invalid-feedback" data-sb-feedback="card:required">Card # is required.</div>
+                        </fieldset>
+                    </div>
+                    <div class="mb-3">
+                        <fieldset style="border:1px solid #999; padding:6px;">
+                            <label class="form-label" for="cvc">CVC #</label>
+                            <input class="form-control"  size=40 id="cvc" type="text" placeholder="0000" data-sb-validations="required" />
+                            <div class="invalid-feedback" data-sb-feedback="cvc:required">CVC # is required.</div>
+                        </fieldset>    
+                    </div>
+                    <div class="mb-3">
+                        <fieldset style="border:1px solid #999; padding:6px;">
+                            <label class="form-label" for="amount">Amount</label>
+                            <input class="form-control" size=40 id="amount" type="text" placeholder="Amount" data-sb-validations="required" />
+                            <div class="invalid-feedback" data-sb-feedback="amount:required">Amount is required.</div>
+                        </fieldset>
+                    </div>
+                </div>    
             </div>
-            <div class="mb-3">
-                <label class="form-label" for="cvc">CVC #</label>
-                <input class="form-control" id="cvc" type="text" placeholder="CVC #" data-sb-validations="required" />
-                <div class="invalid-feedback" data-sb-feedback="cvc:required">CVC # is required.</div>
-            </div>
-            <div class="mb-3">
-                <label class="form-label" for="amount">Amount</label>
-                <input class="form-control" id="amount" type="text" placeholder="Amount" data-sb-validations="required" />
-                <div class="invalid-feedback" data-sb-feedback="amount:required">Amount is required.</div>
-            </div>
-            <div class="mb-3">
-                <label class="form-label" for="firstName">First Name</label>
-                <input class="form-control" id="firstName" type="text" placeholder="First Name" data-sb-validations="required" />
-                <div class="invalid-feedback" data-sb-feedback="firstName:required">First Name is required.</div>
-            </div>
-            <div class="mb-3">
-                <label class="form-label" for="lastName">Last Name</label>
-                <input class="form-control" id="lastName" type="text" placeholder="Last Name" data-sb-validations="required" />
-                <div class="invalid-feedback" data-sb-feedback="lastName:required">Last Name is required.</div>
-            </div>
-            <div class="mb-3">
-                <label class="form-label" for="city">City</label>
-                <input class="form-control" id="city" type="text" placeholder="City" data-sb-validations="required" />
-                <div class="invalid-feedback" data-sb-feedback="city:required">City is required.</div>
-            </div>
-            <div class="mb-3">
-                <label class="form-label" for="state">State</label>
-                <select class="form-select" id="state" aria-label="State">
-                    <option value="Texas">Texas</option>
-                    <option value="New York">New York</option>
-                </select>
-            </div>
-            <div class="mb-3">
-                <label class="form-label" for="postalCode">Postal Code</label>
-                <input class="form-control" id="postalCode" type="text" placeholder="Postal Code" data-sb-validations="required" />
-                <div class="invalid-feedback" data-sb-feedback="postalCode:required">Postal Code is required.</div>
-            </div>
-            <div class="mb-3">
-                <label class="form-label" for="message">Message</label>
-                <textarea class="form-control" id="message" type="text" placeholder="Message" style="height: 10rem;" data-sb-validations="required"></textarea>
-                <div class="invalid-feedback" data-sb-feedback="message:required">Message is required.</div>
-            </div>
-            <div class="d-none" id="submitSuccessMessage">
-                <div class="text-center mb-3">
-                    <div class="fw-bolder">Form submission successful!</div>
-                    <p>To activate this form, sign up at</p>
-                    <a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
+            <div class="fl-name d-flex justify-content-between">
+                <div class="f-name">
+                    <div class="mb-3">
+                        <label class="form-label" for="firstName">First Name</label>
+                        <input class="form-control" size=50 id="firstName" type="text" placeholder="" data-sb-validations="required" />
+                        <div class="invalid-feedback" data-sb-feedback="firstName:required">First Name is required.</div>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label" for="City">City</label>
+                        <input class="form-control" size=60 id="lastName" type="text" placeholder="" data-sb-validations="required" />
+                        <div class="invalid-feedback" data-sb-feedback="lastName:required">Last Name is required.</div>
+                    </div>
+                </div> 
+                <div class="l-name">
+                    <div class="mb-3">
+                        <label class="form-label" for="city">Last Name</label>
+                        <input class="form-control" size=60 id="city" type="text" placeholder="" data-sb-validations="required" />
+                        <div class="invalid-feedback" data-sb-feedback="city:required">City is required.</div>
+                    </div>
+                    <div class="address d-flex justify-content-between">
+                        <div class="mb-3">
+                            <label class="form-label" for="state">State</label>
+                            <select class="form-select" style="width: 140px;" id="state" aria-label="State">
+                                <option value="Pick A State">Pick A State</option>
+                                <option value="Texas">Texas</option>
+                                <option value="New York">New York</option>
+                            </select>
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label" for="postalCode">Postal Code</label>
+                            <input class="form-control" id="postalCode" type="text" placeholder="Postal Code" data-sb-validations="required" />
+                            <div class="invalid-feedback" data-sb-feedback="postalCode:required">Postal Code is required.</div>
+                        </div>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label" for="message">Message</label>
+                        <textarea class="form-control" id="message" type="text" placeholder="Message" style="height: 10rem;" data-sb-validations="required"></textarea>
+                        <div class="invalid-feedback" data-sb-feedback="message:required">Message is required.</div>
+                    </div>
+                    <div class="d-none" id="submitSuccessMessage">
+                        <div class="text-center mb-3">
+                            <div class="fw-bolder">Form submission successful!</div>
+                            <p>To activate this form, sign up at</p>
+                            <a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="d-none" id="submitErrorMessage">
-                <div class="text-center text-danger mb-3">Error sending message!</div>
-            </div>
-            <div class="d-grid">
-                <button class="btn btn-primary btn-lg disabled" id="submitButton" type="submit">Submit</button>
-            </div>
+                <div class="d-none" id="submitErrorMessage">
+                    <div class="text-center text-danger mb-3">Error sending message!</div>
+                </div>
+                <div class="d-grid">
+                    <button class="btn btn-primary btn-lg disabled" id="submitButton" type="submit">Submit</button>
+                </div>
         </form>
+        
     </div>
 
     
